Bug 1610692 - Move call that can run content code out of constructor. r=dom-workers-and-storage-reviewers,asuth

ServiceWorkerRegistration::UpdateState can call content code, which
in turn can result in the registrations getting deleted. This
commit moves the call outside the constructor, so the
registration's creator has a chance to get a proper RefPtr to it.

Differential Revision: https://phabricator.services.mozilla.com/D61706